<resources>
    <string name="app_name">Evn Smartcare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_ngay_row">Ngày :</string>
    <string name="label_khuvuc_row">Khu vực :</string>
    <string name="label_thoigian_row">Thời gian :</string>
    <string name="label_phamvi_row">Phạm vi :</string>
    <string name="ky">Kỳ</string>
    <string name="thang">Tháng</string>
    <string name="nam">Năm</string>
    <string name="sotien">Số tiền :</string>
    <string name="tongtien">Tổng tiền :</string>
    <string name="dong">ĐÓNG</string>
    <string name="chitiet">Chi Tiết</string>
    <string name="gtgt">GTGT :</string>
    <string name="thoattaikhoan">Bạn có muốn thoát tài khoản này không ?</string>
      <string name="test_kv_catdien1">Đường số 1,3,
         bên phải trục chính KCN Trà Nóc 1,bên phải trục chính KCN Trà Nóc 2,
         Các Rạch:Chuối 1,2,Cái Tắc,Miễu ông,Mương Khai,Ông Dựa,Ông Kinh,
         Khóan Châu,Ông đội-P.Long Tuyền,Thới An Đông</string>
     <string name="test_kv_catdien2">Sân bay Cần thơ,Đường Lê Hồng Phong
         (từ nhà máy điện Trà Nóc đến Cty Da Tây Đô),Bùi Hữu Nghĩa,
          Công Binh, Huỳnh Phan Hộ, Nguyễn Viết Xuân, Lê Thị Hồng Gấm</string>
     <string name="test_kv_catdien3">Đường số 1, 3 KCN Trà Nóc 1,
         bên phải trục chính KCN Trà Nóc 1, bên phải trục chính KCN Trà Nóc 2</string>
    <string name="test_kv_catdien4">KDC Hồng Phát, Cty Cơ điện Thới Hưng, Ngân hàng Sacombank</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title">Phần mềm chăm sóc khách hàng 1.0</string>
    <string name="api_key">AIzaSyCPLWwT-QN4PgDFTqrEBkHTJmsyatCPVbQ</string>
    <string name="dang_ky_ngay"><u><b><i>Chưa có tài khoản, đăng ký ngay</i></b></u></string>
    <string name="author_name">Công ty điện lực TP. Cần Thơ</string>
    <string name="author_url">pccantho.evnspc.vn</string>
    <string name="author_phone">(0710)2221042</string>
    <string name="author_address">Số 06 Nguyễn Trãi, Thành phố Cần Thơ.</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_send">Send</string>
    <string name="thong_tin">thông tin</string>
    <string name="tieu_thu">tiêu thụ</string>
    <string name="hoa_don">Hoá đơn</string>
    <string name="lich_cat_dien">lịch cắt điện</string>
    <string name="bao_hong">báo hỏng</string>
    <string name="about">giới thiệu</string>
    <string name="phan_hoi">phản hồi</string>
    <string name="nhap_chi_so">nhập chỉ số</string>
    <string name="label_thong_tin">Thông tin khách hàng</string>
    <string name="label_tieu_thu">Sản lượng điện sử dụng</string>
    <string name="label_hoa_don">Hoá đơn sử dụng hàng tháng</string>
    <string name="label_lich_cat_dien">Lịch cắt điện</string>
    <string name="label_bao_hong">Báo hỏng</string>
    <string name="label_phan_hoi">Ý kiến phản hồi của bạn</string>
    <string name="label_about">Thông tin về Điện Lực</string>
    <string name="label_nhap_chi_so">Tự nhập chỉ số</string>
    <string name="label_ma_khach_hang">Mã khách hàng</string>
    <string name="label_ten_khach_hang">Tên khách hàng</string>
    <string name="label_dia_chi">Địa chỉ</string>
    <string name="label_dien_thoai">Điện thoại :</string>
    <string name="label_loai_khach_hang">Loại khách hàng</string>
    <string name="label_cmnd">Chứng minh nhân dân</string>
    <string name="label_loai_hu_hong">Loại hư hỏng</string>
    <string name="label_ghi_chu">Ghi chú</string>
    <string name="gt_ma_khachhang">Mã khách hàng là mã số đại diện cho 1 khách hàng, bạn có thể xem mã khách hàng trên hoá đơn tiền điện.\nVị trí mã khách hàng trên hoá đơn :</string>
    <string name="btn_gui_thong_bao">Gửi thông báo</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="xn_mat_khau">Xác nhận mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="gui_phanhoi">Gửi phản hồi</string>
    <string name="title_notification">Công ty Điện Lực Cần Thơ xin thông báo :</string>
    <string name="alert_tieuthu">Bạn nằm trong khu vực bị cắt điện từ 7h:00 đến 17h:00 ngày 22/01/2015 thuộc trạm ABC</string>
    <string name="alert_catdien">Sản lượng của bạn trong kỳ 1 tháng 01 năm 2015 là 221 kW, số tiền 315.200 VND</string>
    <string name="alert_signin_ok">Đăng nhập thành công</string>
    <string name="alert_not_connect_server">Không kết nối được server</string>
    <string name="alert_no_new_data">Không có dữ liệu mới</string>
    <string name="loi_khoi_tao_giao_dien">Lỗi khởi tạo giao diện !</string>
    <string name="loi_nhap_lieu">Lỗi khi nhập liệu !</string>
    <string name="loi_tao_danh_sach_tu_data">Lỗi tạo danh sách từ dữ liệu !</string>
    <string name="loi_khong_ho_tro_goi">Không hỗ trợ gọi điện trên thiết bị này !</string>
    <string name="loi_khong_the_thuc_hien_goi">Lỗi khi thực hiện cuộc gọi !</string>
    <string name="loi_da_xay_ra_khi_thuc_hien_chuc_nang_nay">Đã có lỗi xảy ra thì thực hiện chức năng này !</string>
    <string name="agree">ĐỒNG Ý</string>
    <string name="disagree">KHÔNG</string>
    <string name="title_xacnhan">XÁC NHẬN</string>
    <string name="alert_thoat">Bạn có muốn thoát ứng dụng không ?</string>
    <string name="more_info">More Info</string>
    <string name="basic">Basic</string>
    <string name="stacked">Stacked Buttons</string>
    <string name="neutral">Neutral Button</string>
    <string name="callbacks">Callbacks</string>
    <string name="list">Basic List</string>
    <string name="singleChoice">Single Choice</string>
    <string name="multiChoice">Multi Choice</string>
    <string name="customView">Custom View</string>
    <string name="themed">Themed</string>
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="security">Security</string>
    <string name="securityType">802.1x EAP</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string-array name="socialNetworks">
        <item>Twitter</item>
        <item>Google+</item>
        <item>Instagram</item>
        <item>Facebook</item>
    </string-array>
    <string name="choose">Choose</string>
    <string name="speedBoost">Turn on speed boost now!</string>
    <string name="noThanks">No thanks</string>
    <string name="googleWifi">Google Wifi</string>
    <string name="connect">Connect</string>
    <string name="about_body"><![CDATA[
        material-dialogs, a library  designed by <b>Aidan Follestad</b>.<br/>
        <a href=\'http://aidanfollestad.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/afollestad\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://google.com/+AidanFollestad\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/afollestad\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/afollestad\'>LinkedIn</a>
    ]]></string>
    <string name="dismiss">Dismiss</string>
    <string name="basic_notitle">Basic (No Title)</string>
    <string name="shareLocationPrompt">This app wants to access your location.</string>
    <string name="basic_list_long">Basic Long List</string>
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="custom_listitem_button">A button!</string>
    <string name="custom_adapter">Custom Adapter</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae metus nec sapien elementum interdum ac mollis tortor. Nunc porttitor metus placerat orci auctor, sed dictum magna dapibus. Morbi a lacus ante. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin posuere nisl imperdiet lectus elementum accumsan. Etiam lacinia nisi ut nulla fermentum tempus. Integer ornare lacinia diam non maximus. Vestibulum iaculis urna eu elementum scelerisque. Etiam nisl erat, bibendum vitae magna nec, convallis malesuada erat. Cras non porttitor nibh. Pellentesque rhoncus sem luctus felis tincidunt bibendum. Pellentesque vulputate eros at nulla sollicitudin volutpat. Pellentesque laoreet est sit amet erat laoreet, id molestie nulla efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed varius nisl at imperdiet facilisis.</string>
    <string name="basic_longContent">Basic (Long Content)</string>
    <string name="basic_icon">Basic (Icon)</string>
    <string name="basic_list_notitle">Basic List (No Title)</string>
    <string name="folder_chooser">Folder Chooser</string>
    <string name="showCancelDismissCallbacks">Show/Cancel/Dismiss Callbacks</string>
    <string name="changelog">Changelog</string>
    <string name="customView_webView">Custom View No Scroll #1</string>
    <string name="customView_colorChooser">Custom View No Scroll #2</string>
    <string name="ssid">SSID</string>
    <string name="ssidLit">Material Dialogs</string>
    <string name="color_chooser">Color Chooser</string>
    <string name="preference_dialogs">Preference Dialogs</string>
    <string name="list_pref_title">Material List Preference</string>
    <string name="list_pref_desc">This is an example of a list preference that automatically uses Material Dialogs to show the list dialog.</string>
    <string name="edittext_pref_title">Material EditText Preference</string>
</resources>