<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:background="@color/actionbar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_title_baohong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_weight="0.9"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold"
             android:paddingLeft="@dimen/padding_title" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:src="@drawable/ic_menu" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.93" >


      <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" 
           android:gravity="center|left">

          <TextView
              android:id="@+id/textView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_dia_chi"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content" 
              android:padding="5dp"
              android:gravity="center|left">

              <TextView
                  android:id="@+id/textView1"
                  android:layout_width="0dp"
                  android:layout_weight="0.9"
                  android:layout_height="wrap_content"
                  android:text="@string/author_address"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="@color/text_black" />

              <LinearLayout
                  android:layout_width="48dp"
                  android:layout_height="48dp"
                  android:orientation="vertical" 
                  android:background="@drawable/rounded_hong"
                  android:gravity="center"
                  android:onClick="to_intent_bando">

                  <ImageView
                      android:id="@+id/imageView1"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:src="@drawable/ic_location" />

              </LinearLayout>

          </LinearLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="@color/xam_400" />

          <TextView
              android:id="@+id/textView4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_dien_thoai"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="5dp" 
              android:gravity="center|left">

              <TextView
                  android:id="@+id/textView2"
                  android:layout_width="0dp"
                  android:layout_weight="0.9"
                  android:layout_height="wrap_content"
                  android:text="@string/author_phone"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:textColor="@color/text_black" />

              <LinearLayout
                  android:layout_width="48dp"
                  android:layout_height="48dp"
                  android:orientation="vertical" 
                  android:background="@drawable/rounded_cyan"
                  android:gravity="center" 
                  android:onClick="make_call">

                  <ImageView
                      android:id="@+id/imageView2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:src="@drawable/ic_call" />

              </LinearLayout>

          </LinearLayout>

          <ImageView
              android:id="@+id/imageView4"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:src="@drawable/evn_address_cantho"
              android:onClick="to_intent_bando" />

       </LinearLayout>

    </FrameLayout>

    <!-- author info -->

</LinearLayout>