<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/evn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgLogo"
                    android:layout_centerHorizontal="true"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/label_ma_khach_hang"
                        android:textColor="@color/white"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|right" >

                        <EditText
                            android:id="@+id/edt_makhachhang_dangky"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/padding_name_input"
                            android:layout_marginTop="@dimen/padding_name_input"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:ems="10"
                            android:inputType="textCapWords"
                            android:padding="10dp" >

                            <requestFocus />
                        </EditText>

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_question"
                            android:padding="5dp"
                            android:onClick="to_intent_giathich" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mat_khau"
                        android:textColor="@color/white"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/edt_matkhau_dangky"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_name_input"
                        android:layout_marginTop="@dimen/padding_name_input"
                        android:background="@color/white"
                        android:inputType="textCapWords"
                        android:padding="10dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/xn_mat_khau"
                        android:textColor="@color/white"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/edt_xac_nhan_matkhau_dangky"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_name_input"
                        android:layout_marginTop="@dimen/padding_name_input"
                        android:background="@color/white"
                        android:inputType="textCapWords"
                        android:padding="10dp" />

                    <Button
                        android:id="@+id/btnJoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_rounded_corner"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:text="@string/dang_ky"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:onClick="to_intent_main"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>
                </LinearLayout>

                <!-- author info -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_name"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_url"
                        android:textColor="@color/white"
                        android:textSize="12dp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <com.pnikosis.materialishprogress.ProgressWheel
                        android:id="@+id/progress_wheel"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        wheel:matProg_barColor="#5588FF"
                        wheel:matProg_progressIndeterminate="true"
                        android:layout_gravity="center"
                        android:visibility="gone"/>
                    </FrameLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>